server.log
/Users/danielbednarski/Documents/Code/asherah/api.js:1346
        function highlightSearchTerms(text, parsedQuery) {
                 ^^^^^^^^^^^^^^^^^^^^

SyntaxError: Unexpected identifier
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:121:18)
    at [eval]:1:13
    at Script.runInThisContext (node:vm:123:12)

Node.js v18.17.1
